feat: add pagination to registry
